--- a/Syllabus.tex
+++ b/Syllabus.tex
@@ -153,15 +153,24 @@ Because of the large number of topics that could be included in this course only
 \subsection{Required Introduction to Energy Economics}
   \begin{enumerate}
     \item Introduction and Background
+    \item International Comparisions
+    \item Oil
+    \item Natural Gas
+    \item Coal
+    \item Electricity
   
-  \end{enumerate}
+ \end{enumerate}
   
 When the overview is nearing completion the class will decide on the next topic via an exhaustive ballot.  Not all of the sections will be available immediately since some require prior completion of one or more topics.
 
 \subsection{Topics}
 
 \begin{enumerate}
+  \item Ancilary Services
   \item Energy Efficiency Policies
+  \item Energy Policy Act of 2005
+  \item FERC, NERC and EPA
+  \item United Nations Framework Convention on Climate Change
   \item Renewable Energy Policies
 
 
