Added More topics from Brainstorm

--- a/Syllabus.tex
+++ b/Syllabus.tex
@@ -158,12 +158,12 @@ Because of the large number of topics that could be included in this course only
     \item Natural Gas
     \item Coal
     \item Electricity
-  
  \end{enumerate}
   
 When the overview is nearing completion the class will decide on the next topic via an exhaustive ballot.  Not all of the sections will be available immediately since some require prior completion of one or more topics.
 
 \subsection{Topics}
+WARNING! IN NO ORDER.
 
 \begin{enumerate}
   \item Ancilary Services
@@ -172,10 +172,33 @@ When the overview is nearing completion the class will decide on the next topic 
   \item FERC, NERC and EPA
   \item United Nations Framework Convention on Climate Change
   \item Renewable Energy Policies
+  \item Combined Heat and Power
+  \item District Power
+  \item Independent System Operator (ISO) and Region Transmission Organization (RTO) functions
 
-
+  \item Demand Side Managment
+  \item Variable Renewable
+  \item Non-variable Renewable
+  \item Fuel Economy Standards and Automobile Markets
+  \item Currently in Oil Markets and OPEC
+  \item Electricity in the Pacific Northwest
+  \item Demand Response 
   \item Provisioning Ancilary services
+  \item Common Electricity Tarrifs
+  \item Time of Use Tarrifs
+  \item Green Button and Open Data
+  \item Home and Building Energy Managment Systems
+  \item Building Energy Modeling
+  \item Details on Title 24 and other Conservation Code
+  \item Solar Code
+  \item Behavioral Approaches to Energy Efficency and Demand Response
+  \item Load Forecasting Methodology
+  \item Reliability Modeling
+  \item Renewable Portfolio Standards
+  \item Energy Storage
+  \item
   \item Electricity in Hawaii
+  \item Introduction to Energy Efficiency Program Evaluation
 \end{enumerate}
 
 \end{document}
