--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -27,6 +27,8 @@ Students that have been at PSU for a while are familiar with "slash courses" whe
 
 The undergraduate section has microecnomic theory, EC 311, or the calculus based version, EC 415, listed as prerequisits.  The graduate section requires only graduate standing.
 
+As with most economics courses, the more background you bring to the class, the more get from the class.  For this class it means microecnomic theory and econometrics.  Not all students will have a background in both and many of the graduate students from outside of economics will have neither.  Any technical skills that students are missing will be suplemented with in-class tutorials.  Sometimes this will mean learning about constrianed optimization or breaking out laptops for a tutorial on running regressions in R.
+
 # Contact Information
 
 The best ways of contacting me, in decreasing order of effectiveness:
@@ -46,4 +48,41 @@ Office Hours:
 
 # Textbook and Other Resources
 
+The main text for the course is Dahl, Carol. _International Energy Markets: Understanding Pricing, Policies, & Profits._ PennWell Books, 2015.  It was chosen undergraduates in mind and illustrates many of the concepts they learned in EC 311/415.
+
+This text will be heavily suplemented with material from the Energy Information Administration (EIA) https://www.eia.gov/, the texbook authors website (http://dahl.mines.edu/), and journal articles available electronically through the library.
+
 # Assessments and Grade Policy
+
+# Topics and Readings
+
+Do not let this section alarm you.  We will only address part of this outline in the class. As with most of my upper division courses, we will complete a small subset at the start of the class and then vote on each suceeding topic.
+
+Each topic has some readings that both undergraduates and graduate students will read and some that are specific to each.  If you are a graduate student that is trying to rapidly get up to speed on a topic, I recomend looking at the undergraduate readings in addition to your own.
+
+# Other Rules
+
++ Begging for grades will result in an immediate lowering of your course grade by a full letter grade.
+  
++ When completing assignments you may use your book, wiki, calculator, spreadsheets, notes, or other resources as long as it is not another student or person unless the assignment allows.  *The work must be authentically and genuinely your own. In other words, if you are copying answers you found online, it is not your work.*
+  
++ Go to office hours at the first sign of trouble -- not as a last resort.
+
++ In this classroom, we support and value diversity.  To do so requires that we:
+
+    + Respect the dignity and essential worth of all individuals
+    + Promote a culture of respect toward all individuals
+    + Respect the privacy, property, and freedom of others
+    + Reject bigotry, discrimination, violence, or intimidation of any kind
+    + Practice personal and academic integrity and expect it from others
+    + Promote the diversity of opinions, ideas, and backgrounds, which is the lifeblood of a university
+
+   For additional information, please see the Office of Affirmative Action \& Equal Opportunity at \url{http://www.pdx.edu/diversity/affirmative-action}.
+
+
++ Accommodations are collaborative efforts between students, faculty, and the Disability Resource Center.  If you have a documented disability and require accommodation, you must arrange to meet with the course instructor prior to or within the first week of the term.  The documentation of your disability must come in writing from the Disability Resource Center (Faculty letter).  Students who believe they are eligible for accommodations but who have not yet obtained approval through the DRC should contact the DRC immediately.  Reasonable and appropriate accommodations will be provided for students with documented disabilities.  For more information on the Disability Resource Center, please see \url{http://www.drc.pdx.edu/}. 
+
++ Academic honesty is expected and required of students enrolled in this course.  Suspected academic dishonesty in this course will be handled according to the procedures set out in the Student Code of Conduct.
+
++ I am sympathetic to family emergencies but you must inform me as soon as possible. If the notice is verbal, please email me with your understanding of our agreement. All agreements have to be in writing.
+
