More optional Topics

--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -77,6 +77,11 @@ Each topic has some readings that both undergraduates and graduate students will
     + Energy Primer, Ch 4.
     
 + Topic Options, Voted on in Class
+  + Shale Boom and Fracking
+  + Energy Efficiency
+  + Estimating Electricity Demand
+  + Natural Gas Markets
+  + Carbon Taxes, Cap and Trade
 
 
 # Other Rules
