--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -77,12 +77,21 @@ Each topic has some readings that both undergraduates and graduate students will
     + Energy Primer, Ch 4.
     
 + Topic Options, Voted on in Class
-  + Shale Boom and Fracking
-  + Energy Efficiency
-  + Estimating Electricity Demand
-  + Natural Gas Markets
-  + Carbon Taxes, Cap and Trade
-
+  + Financial Markets
+    + Energy Primer, Ch 5.
+    + Dahl, Ch 18 - 19.
+  + Intro to Externalities and Public Goods
+    + Dahl, Ch 11 - 12.
+  + Natural Gas Outside the US
+    + Dahl, Ch 9 - 10.   
+    + "International Energy Outlook", 2016, EIA, Ch 3. (https://www.eia.gov/forecasts/ieo/nat_gas.cfm)
+  + Price Controls and Subsidies (Not Carbon Taxes and Implicit Subsidies)
+    + Dahl, Ch 4   
+  + Market Monitoring
+    +  Energy Primer, Ch 6.
+  + Tools for Technical People
+    + Dahl, Ch 14 -17 (Break this up)
+  
 
 # Other Rules
 
