--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -191,3 +191,4 @@ Each topic has some readings that both undergraduates and graduate students will
 
 + I am sympathetic to family emergencies but you must inform me as soon as possible. If the notice is verbal, please email me with your understanding of our agreement. All agreements have to be in writing.
 
+Link to this syllabus https://github.com/woodsjam/Course-Energy-Economics. Check branch for this term.
