--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -133,9 +133,11 @@ analysis.
 
 # Topics and Readings
 
-Do not let this section alarm you.  We will only address part of this outline in the class. As with most of my upper division courses, we will complete a small subset at the start of the class and then vote on each suceeding topic.
+Do not let this section alarm you.  We will only address part of this outline in the class. As with most of my upper division courses, we will complete a small subset at the start of the class and then vote on each suceeding topic. Each topic will have an assignment, usually working with real data or useing a model from the readings in a slightly different context.
 
 Each topic has some readings that both undergraduates and graduate students will read and some that are specific to each.  If you are a graduate student that is trying to rapidly get up to speed on a topic, I recomend looking at the undergraduate readings in addition to your own.
+
+Note that some of these modules will be shared with the Public Utility Economics course.
 
 + Introduction of Core Topics
   + Starting on Topic   
