--- a/SyllabusFall16.Rmd
+++ b/SyllabusFall16.Rmd
@@ -13,9 +13,10 @@ knitr::opts_chunk$set(echo = TRUE)
 # Course Description
 
 The official description of the course is:
+
 > Economics and structure of energy markets, with a focus on electricity. Examines current policy issues arising from energy production and use.
 
-Since I am teaching this course for the first time there will be changes from previous terms and I will be making official changes in description and prerequisites during the year.  
+Since I am teaching this course for the first time, there will be changes from previous terms and I will be making official changes in description and prerequisites during the year.  
 
 This is a companion course to EC 437/537 which will address regulatory and competitive policies in electricity, public transportation, water, natural,  and telecommunications.  The order of the courses has changed to reflect the evolving nature of the field.
 
@@ -112,6 +113,8 @@ must be less than 20 pages.
 
 ## Referee Reports
 
+A referee report is a critical examination of an academic paper.  There is a split in their purpose, help the editor make a determination or help the author, but in either case, you typically make the deepest read of an acdemic paper when you review it.  The official guidance from the AEA is (https://www.aeaweb.org/content/file?id=222) but there is some more detailed guidance here that is more helpful to authors (=http://are.berkeley.edu/courses/ARE251/2004/assignments/RRGuidelines.pdf)
+
 + A referee report on a student’s or group’s draft paper. You will be assigned a paper to review. The
 report must be less than five pages, will be evaluated on a 0 to 5 scale and will constitute 10% of your
 grade. This is due by DATE8 and must be posted as a comment on the draft paper in the “Draft
@@ -132,7 +135,6 @@ analysis.
  + 5 Points Exemplary example of 4.
 
 
-
 # Topics and Readings
 
 Do not let this section alarm you.  We will only address part of this outline in the class. As with most of my upper-division courses, we will complete a small subset at the start of the class and then vote on each succeeding topic. Each topic will have an assignment, usually working with real data or using a model from the readings in a slightly different context.
@@ -142,40 +144,40 @@ Each topic has some readings that both undergraduates and graduate students will
 Note that some of these modules will be shared with the Public Utility Economics course.
 
 + Introduction of Core Topics
-  + Starting on Topic   
-    + "Energy Primer: A Handbook of Energy Market Basics", FERC, 2015 (http://www.ferc.gov/market-oversight/guide/energy-primer.pdf), Chapter 1
-    + Dahl, Ch 1-2.
-  + Coal
-    + Dahl, Ch 3.
-  + Natural Gas
-    + Dahl, Ch 8.
-    + Energy Primer, Ch 2.
-  + Electricity
-    + Energy Primer, Ch 3. 
-    + Dahl, Ch 5-6.   
-  + Oil
-    + Dahl, Ch 7.
-    + Energy Primer, Ch 4.
+    + Starting on Topic   
+        + "Energy Primer: A Handbook of Energy Market Basics", FERC, 2015 (http://www.ferc.gov/market-oversight/guide/energy-primer.pdf), Chapter 1
+        + Dahl, Ch 1-2.
+    + Coal
+        + Dahl, Ch 3.
+    + Natural Gas
+        + Dahl, Ch 8.
+        + Energy Primer, Ch 2.
+    + Electricity
+        + Energy Primer, Ch 3. 
+        + Dahl, Ch 5-6.   
+    + Oil
+        + Dahl, Ch 7.
+        + Energy Primer, Ch 4.
     
 + Topic Options, Voted on in Class
-  + Financial Markets
-    + Energy Primer, Ch 5.
-    + Dahl, Ch 18 - 19.
-  + Intro to Externalities and Public Goods
-    + Dahl, Ch 11 - 12.
-  + Natural Gas Outside the US
-    + Dahl, Ch 9 - 10.   
-    + "International Energy Outlook", 2016, EIA, Ch 3. (https://www.eia.gov/forecasts/ieo/nat_gas.cfm)
-  + Price Controls and Subsidies (Not Carbon Taxes and Implicit Subsidies)
-    + Dahl, Ch 4   
-  + Market Monitoring
-    +  Energy Primer, Ch 6.
-  + Hotelling's Rule and Dynamic Extraction
-    + Dahl, Ch 14
-  + Unit Commitment
-    + Dahl Ch 15
-  + Energy Demand
-    + Dahl Ch 16
+    + Financial Markets
+        + Energy Primer, Ch 5.
+        + Dahl, Ch 18 - 19.
+    + Intro to Externalities and Public Goods
+        + Dahl, Ch 11 - 12.
+    + Natural Gas Outside the US
+        + Dahl, Ch 9 - 10.   
+        + "International Energy Outlook", 2016, EIA, Ch 3. (https://www.eia.gov/forecasts/ieo/nat_gas.cfm)
+    + Price Controls and Subsidies (Not Carbon Taxes and Implicit Subsidies)
+        + Dahl, Ch 4   
+    + Market Monitoring
+        +  Energy Primer, Ch 6.
+    + Hotelling's Rule and Dynamic Extraction
+        + Dahl, Ch 14
+    + Unit Commitment
+        + Dahl Ch 15
+    + Energy Demand
+        + Dahl Ch 16
 
 
 The course requires a term paper.  It is a good idea to do some broad reading to see the breadth of topics in energy economics, which roughly means the economic effects of using and generating energy.  Here are some sources for keeping up on current events and research topics.
